Update 25/06/2026 & bugfix overlap contact section

--- a/style.css
+++ b/style.css
@@ -144,10 +144,10 @@ a:hover {
 /* SECTIONS */
 section {
   padding-top: 4vh;
-  height: 96vh;
+  min-height: 96vh;
   margin: 0 10rem;
   box-sizing: border-box;
-  min-height: fit-content;
+  height: fit-content;
 }
 
 .section-container {
